[package]
name = "tracker"
version = "0.1.0"
authors = ["audiodog301"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.13.1"
anyhow = "1.0.34"
tuix = {git = "https://github.com/geom3trik/tuix", branch = "main"}